[tool.poetry]
name = "events"
version = "0.1.0"
description = "A package for managing events and Kafka integration."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "events" },
    { include = "events/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
