[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "events"
version = "2024.26.05"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [
    { include = "event.py" },
    { include = "kafka_event.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
metrics = {git = "https://github.com/BobryTeam/metrics.git", branch = "feature/pyproject"}
scale-data = {git = "https://github.com/BobryTeam/scale-data.git", branch = "feature/pyproject"}
trend-data = {git = "https://github.com/BobryTeam/trend-data.git", branch = "feature/pyproject"}
